# tashkent_geolocation_bot

./: .gitignore  Cargo.toml  README.md  catalog_museum.csv  data.ods  db.sqlite3
src/: buttons.rs  database.rs  main.rs  table_to_db.rs
